--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
             <div class="card" data-id="south">
               <img
-                src="img/south/__________.webp"
+                src="img/south/1.webp"
                 alt="tabs-img"
                 class="tabs-img"
               />
@@ -174,7 +174,7 @@
 
             <div class="card" data-id="south">
               <img
-                src="img/south/_____________.webp"
+                src="img/south/2.webp"
                 alt="tabs-img"
                 class="tabs-img"
               />
